--- a/albumSales.ipynb
+++ b/albumSales.ipynb
@@ -10,44 +10,64 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 640 entries, 0 to 639\n",
-      "Data columns (total 5 columns):\n",
-      " #   Column                  Non-Null Count  Dtype \n",
-      "---  ------                  --------------  ----- \n",
-      " 0   Year                    640 non-null    int64 \n",
-      " 1   Artist                  640 non-null    object\n",
-      " 2   Album                   640 non-null    object\n",
-      " 3   Worldwide Sales (Est.)  640 non-null    object\n",
-      " 4   Genre                   640 non-null    object\n",
-      "dtypes: int64(1), object(4)\n",
-      "memory usage: 25.1+ KB\n",
-      "     Year                   Artist                                   Album  \\\n",
-      "0    2019                   Arashi           5x20 All The Best!! 1999-2019   \n",
-      "1    2017               Elton John                                Diamonds   \n",
-      "2    1995          Michael Jackson  History: Past, Present & Future Book I   \n",
-      "3    2015      Broadway Soundtrack                                Hamilton   \n",
-      "4    2003                  Outkast           Speakerboxxx / The Love Below   \n",
-      "..    ...                      ...                                     ...   \n",
-      "635  1994         Movie Soundtrack                           The Lion King   \n",
-      "636  1996         Movie Soundtrack                         Raja Hindustani   \n",
-      "637  1997         Movie Soundtrack                        Dil To Pagal Hai   \n",
-      "638  1997  Buena Vista Social Club                 Buena Vista Social Club   \n",
-      "639  2000                     Enya                      A Day Without Rain   \n",
+      "RangeIndex: 390 entries, 0 to 389\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   Year                    375 non-null    float64\n",
+      " 1   Ranking                 320 non-null    float64\n",
+      " 2   Artist                  375 non-null    object \n",
+      " 3   Album                   375 non-null    object \n",
+      " 4   Worldwide Sales (Est.)  375 non-null    object \n",
+      " 5   CDs                     375 non-null    float64\n",
+      " 6   Tracks                  375 non-null    float64\n",
+      " 7   Album Length            375 non-null    object \n",
+      " 8   Hours                   375 non-null    float64\n",
+      " 9   Minutes                 375 non-null    float64\n",
+      " 10  Seconds                 375 non-null    float64\n",
+      " 11  Genre                   375 non-null    object \n",
+      "dtypes: float64(7), object(5)\n",
+      "memory usage: 36.7+ KB\n",
+      "       Year  Ranking               Artist  \\\n",
+      "0    2019.0      8.0               Arashi   \n",
+      "1    2017.0      8.0           Elton John   \n",
+      "2    1995.0      4.0      Michael Jackson   \n",
+      "3    2015.0      6.0  Broadway Soundtrack   \n",
+      "4    2003.0     10.0              Outkast   \n",
+      "..      ...      ...                  ...   \n",
+      "385     NaN      NaN                  NaN   \n",
+      "386     NaN      NaN                  NaN   \n",
+      "387     NaN      NaN                  NaN   \n",
+      "388     NaN      NaN                  NaN   \n",
+      "389     NaN      NaN                  NaN   \n",
       "\n",
-      "    Worldwide Sales (Est.)    Genre  \n",
-      "0                3,300,000      Pop  \n",
-      "1                3,220,000     Rock  \n",
-      "2               20,000,000      Pop  \n",
-      "3                4,835,000  Hip Hop  \n",
-      "4                7,012,000  Hip Hop  \n",
-      "..                     ...      ...  \n",
-      "635             14,522,893    World  \n",
-      "636             11,000,000    World  \n",
-      "637             12,500,000    World  \n",
-      "638             12,000,000    World  \n",
-      "639             12,097,445    World  \n",
+      "                                      Album Worldwide Sales (Est.)  CDs  \\\n",
+      "0             5x20 All The Best!! 1999-2019              3,300,000  4.0   \n",
+      "1                                  Diamonds              3,220,000  2.0   \n",
+      "2    History: Past, Present & Future Book I             20,000,000  2.0   \n",
+      "3                                  Hamilton              4,835,000  2.0   \n",
+      "4             Speakerboxxx / The Love Below              7,012,000  2.0   \n",
+      "..                                      ...                    ...  ...   \n",
+      "385                                     NaN                    NaN  NaN   \n",
+      "386                                     NaN                    NaN  NaN   \n",
+      "387                                     NaN                    NaN  NaN   \n",
+      "388                                     NaN                    NaN  NaN   \n",
+      "389                                     NaN                    NaN  NaN   \n",
       "\n",
-      "[640 rows x 5 columns]\n"
+      "     Tracks Album Length  Hours  Minutes  Seconds    Genre  \n",
+      "0      67.0      5:04:02   5.07   304.03  18242.0      Pop  \n",
+      "1      34.0      2:35:47   2.60   155.78   9347.0     Rock  \n",
+      "2      30.0      2:28:51   2.48   148.85   8931.0      Pop  \n",
+      "3      46.0      2:22:13   2.37   142.22   8533.0  Hip Hop  \n",
+      "4      39.0      2:14:39   2.24   134.65   8079.0  Hip Hop  \n",
+      "..      ...          ...    ...      ...      ...      ...  \n",
+      "385     NaN          NaN    NaN      NaN      NaN      NaN  \n",
+      "386     NaN          NaN    NaN      NaN      NaN      NaN  \n",
+      "387     NaN          NaN    NaN      NaN      NaN      NaN  \n",
+      "388     NaN          NaN    NaN      NaN      NaN      NaN  \n",
+      "389     NaN          NaN    NaN      NaN      NaN      NaN  \n",
+      "\n",
+      "[390 rows x 12 columns]\n"
      ]
     }
    ],
@@ -56,7 +76,185 @@
     "album_sales = pd.read_csv('albumsales.csv')\n",
     "\n",
     "album_sales.info()\n",
-    "print(album_sales)"
+    "print(album_sales)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Artist</th>\n",
+       "      <th>Album</th>\n",
+       "      <th>Worldwide Sales (Est.)</th>\n",
+       "      <th>Genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Arashi</td>\n",
+       "      <td>5x20 All The Best!! 1999-2019</td>\n",
+       "      <td>3,300,000</td>\n",
+       "      <td>Pop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>Elton John</td>\n",
+       "      <td>Diamonds</td>\n",
+       "      <td>3,220,000</td>\n",
+       "      <td>Rock</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1995</td>\n",
+       "      <td>Michael Jackson</td>\n",
+       "      <td>History: Past, Present &amp; Future Book I</td>\n",
+       "      <td>20,000,000</td>\n",
+       "      <td>Pop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>Broadway Soundtrack</td>\n",
+       "      <td>Hamilton</td>\n",
+       "      <td>4,835,000</td>\n",
+       "      <td>Hip Hop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2003</td>\n",
+       "      <td>Outkast</td>\n",
+       "      <td>Speakerboxxx / The Love Below</td>\n",
+       "      <td>7,012,000</td>\n",
+       "      <td>Hip Hop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>370</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>David Guetta</td>\n",
+       "      <td>Nothing But The Beat</td>\n",
+       "      <td>3,089,144</td>\n",
+       "      <td>Pop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>371</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Susan Boyle</td>\n",
+       "      <td>The Gift</td>\n",
+       "      <td>3,555,000</td>\n",
+       "      <td>Classical</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>372</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>P!NK</td>\n",
+       "      <td>Greatest Hits So Far</td>\n",
+       "      <td>3,526,000</td>\n",
+       "      <td>Pop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>373</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Drake</td>\n",
+       "      <td>Thank Me Later</td>\n",
+       "      <td>3,460,000</td>\n",
+       "      <td>Hip Hop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>374</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Nicki Minaj</td>\n",
+       "      <td>Pink Friday</td>\n",
+       "      <td>3,370,000</td>\n",
+       "      <td>Hip Hop</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>375 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Year               Artist                                   Album  \\\n",
+       "0    2019               Arashi           5x20 All The Best!! 1999-2019   \n",
+       "1    2017           Elton John                                Diamonds   \n",
+       "2    1995      Michael Jackson  History: Past, Present & Future Book I   \n",
+       "3    2015  Broadway Soundtrack                                Hamilton   \n",
+       "4    2003              Outkast           Speakerboxxx / The Love Below   \n",
+       "..    ...                  ...                                     ...   \n",
+       "370  2011         David Guetta                    Nothing But The Beat   \n",
+       "371  2010          Susan Boyle                                The Gift   \n",
+       "372  2010                 P!NK                    Greatest Hits So Far   \n",
+       "373  2010                Drake                          Thank Me Later   \n",
+       "374  2010          Nicki Minaj                             Pink Friday   \n",
+       "\n",
+       "    Worldwide Sales (Est.)      Genre  \n",
+       "0                3,300,000        Pop  \n",
+       "1                3,220,000       Rock  \n",
+       "2               20,000,000        Pop  \n",
+       "3                4,835,000    Hip Hop  \n",
+       "4                7,012,000    Hip Hop  \n",
+       "..                     ...        ...  \n",
+       "370              3,089,144        Pop  \n",
+       "371              3,555,000  Classical  \n",
+       "372              3,526,000        Pop  \n",
+       "373              3,460,000    Hip Hop  \n",
+       "374              3,370,000    Hip Hop  \n",
+       "\n",
+       "[375 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_albumSales= album_sales.drop(columns=['Tracks', 'CDs', 'Album Length', \n",
+    "                                          'Hours', 'Minutes', 'Seconds', 'Ranking' ])\n",
+    "\n",
+    "\n",
+    "new_albumSales.to_csv('newalbumSales.csv', index=False)\n",
+    "new_albumSales = pd.read_csv('new_albumSales.csv')\n",
+    "\n",
+    "\n",
+    "\n",
+    "new_albumSales\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -70,29 +268,40 @@
     "# \t\"Year\", \n",
     "# \t\"Album\", \n",
     "# \t\"WorldwideSales(Est.)\"\n",
-    "# From albumsales\n",
+    "# From new_albumsales\n",
     "# ORDER BY YEAR ASC\n",
     "\n",
     "#Deleting rows from before 2010\n",
     "# DELETE \n",
-    "# FROM albumsales\n",
+    "# FROM new_albumsales\n",
     "# WHERE YEAR < 2010;\n",
     "\n",
     "# DELETE\n",
-    "# FROM albumsales\n",
+    "# FROM new_albumsales\n",
     "# WHERE YEAR > 2020;\n",
     "\n",
     "# #list going from 2010s to 2020\n",
     "# SELECT *\n",
-    "# FROM albumsales\n",
+    "# FROM new_albumsales\n",
     "# ORDER BY YEAR ASC\n",
     "\n",
-    "\n"
+    "# SELECT a.Artist,\n",
+    "# \t   a.Album,\n",
+    "# \t   a.Genre,\n",
+    "# \t   a.Year,\n",
+    "# \t   a.\"WorldwideSales(Est.)\",\n",
+    "# \tb.GrammysWon, \n",
+    "# \tb.Billboard200\n",
+    "\t\n",
+    "# FROM new_albumSales a\n",
+    "# INNER JOIN grammys b\n",
+    "# \tON a.Album = b.Album\n",
+    "# ORDER BY a.YEAR ASC;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -173,23 +382,15 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>215</th>\n",
+       "      <th>105</th>\n",
        "      <td>2020</td>\n",
-       "      <td>BTS</td>\n",
-       "      <td>Be</td>\n",
-       "      <td>5,397,015</td>\n",
-       "      <td>Pop</td>\n",
+       "      <td>The Weeknd</td>\n",
+       "      <td>After House</td>\n",
+       "      <td>4,402,942</td>\n",
+       "      <td>R&amp;B</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>216</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>Taylor Swift</td>\n",
-       "      <td>Folklore</td>\n",
-       "      <td>4,115,487</td>\n",
-       "      <td>Pop</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>217</th>\n",
+       "      <th>106</th>\n",
        "      <td>2020</td>\n",
        "      <td>Dua Lipa</td>\n",
        "      <td>Future Nostalgia</td>\n",
@@ -197,24 +398,32 @@
        "      <td>Pop</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>218</th>\n",
+       "      <th>107</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Lay</td>\n",
+       "      <td>Lit</td>\n",
+       "      <td>2,741,096</td>\n",
+       "      <td>Hip Hop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>BTS</td>\n",
+       "      <td>Be</td>\n",
+       "      <td>5,397,015</td>\n",
+       "      <td>Pop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
        "      <td>2020</td>\n",
        "      <td>Blackpink</td>\n",
        "      <td>The Album</td>\n",
        "      <td>2,947,398</td>\n",
        "      <td>Pop</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>219</th>\n",
-       "      <td>2020</td>\n",
-       "      <td>The Weeknd</td>\n",
-       "      <td>After House</td>\n",
-       "      <td>4,402,942</td>\n",
-       "      <td>R&amp;B</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>220 rows × 5 columns</p>\n",
+       "<p>110 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -225,11 +434,11 @@
        "3    2010  Jason Aldean                     My Kinda Party   \n",
        "4    2010    Katy Perry                      Teenage Dream   \n",
        "..    ...           ...                                ...   \n",
-       "215  2020           BTS                                 Be   \n",
-       "216  2020  Taylor Swift                           Folklore   \n",
-       "217  2020      Dua Lipa                   Future Nostalgia   \n",
-       "218  2020     Blackpink                          The Album   \n",
-       "219  2020    The Weeknd                        After House   \n",
+       "105  2020    The Weeknd                        After House   \n",
+       "106  2020      Dua Lipa                   Future Nostalgia   \n",
+       "107  2020           Lay                                Lit   \n",
+       "108  2020           BTS                                 Be   \n",
+       "109  2020     Blackpink                          The Album   \n",
        "\n",
        "    WorldwideSales(Est.)    Genre  \n",
        "0              7,740,795  Hip Hop  \n",
@@ -238,29 +447,30 @@
        "3              4,115,000  Country  \n",
        "4             11,094,000      Pop  \n",
        "..                   ...      ...  \n",
-       "215            5,397,015      Pop  \n",
-       "216            4,115,487      Pop  \n",
-       "217            3,332,300      Pop  \n",
-       "218            2,947,398      Pop  \n",
-       "219            4,402,942      R&B  \n",
+       "105            4,402,942      R&B  \n",
+       "106            3,332,300      Pop  \n",
+       "107            2,741,096  Hip Hop  \n",
+       "108            5,397,015      Pop  \n",
+       "109            2,947,398      Pop  \n",
        "\n",
-       "[220 rows x 5 columns]"
+       "[110 rows x 5 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import sqlite3\n",
+    "# import pandas as pd\n",
+    "# import sqlite3\n",
     "\n",
     "\n",
-    "con = sqlite3.connect('./sqlalbumsales.db')\n",
-    "album_sales = pd.read_sql_query('Select * from albumsales Order by Year ASC', con)\n",
+    "# con = sqlite3.connect('./sqlnewalbumsales.db')\n",
+    "# new_albumSales = pd.read_sql_query('Select * from new_albumsales Order by Year ASC', con)\n",
     "\n",
-    "album_sales\n"
+    "# new_albumSales\n",
+    "\n"
    ]
   },
   {
@@ -268,25 +478,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import pandas as pd \n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "plt.figure(figsize=(8,5))\n",
-    "\n",
-    "plt.title(\"Greatest Album of the 2010's\", fontdict={'fontweight': 'bold', 'fontsize':14})\n",
-    "\n",
-    "\n",
-    "plt.plot(album_sales.Year, album_sales.WorldWideSales(Est.), 'r.-', label=2010)\n",
-    "\n",
-    "plt.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -305,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
